fix white space for safari

--- a/style.css
+++ b/style.css
@@ -45,11 +45,21 @@ html {
     scroll-behavior: smooth;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .container{
     display: grid;
     justify-items:center;
     width: 100%;
 }
+
 /* thumbnail */
 .thumbnails{
     display: grid;
